添加同义词，IKTokenizerFactory，不过貌似不好使

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
                     <include>**/*.dic</include>
                 </includes>
             </resource>
+            <!--<resource>-->
+                <!--<directory>src/main/resources</directory>-->
+                <!--<includes>-->
+                    <!--<include>*</include>-->
+                <!--</includes>-->
+            <!--</resource>-->
         </resources>
         <plugins>
             <plugin>
